[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[package]
name = "tokeniser-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.1", features = ["http"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.5", features = ["util"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipauto = "0.2.0"

[dev-dependencies]
anyhow = "1.0.98"
axum-test = "17.3.0"
