[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[package]
name = "tokeniser-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = { version = "0.22.1", features = ["http"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["util"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipauto = "0.2.0"

[dev-dependencies]
anyhow = "1.0.100"
axum-test = "17.3.0"
